--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,3 +1,3 @@
 metadata:
   annotations:
-    backstage.io/techdocs-ref: url:https://github.com/org/repo
+    backstage.io/techdocs-ref: url:https://github.com/Toyota-Motor-North-America/ace-self-service-drc-test
